--- a/public/index.html
+++ b/public/index.html
@@ -1,42 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>AI Text to Voice Pro</title>
+  <title>AI Text to Voice</title>
 </head>
 <body>
+  <h2>AI Text to Speech</h2>
+  <textarea id="text" rows="5"></textarea><br><br>
+  <button onclick="speak()">Generate Voice</button>
+  <br><br>
+  <audio id="audio" controls></audio>
 
-<h2>AI Text to Voice Generator</h2>
-
-<textarea id="text" placeholder="Text likho..." rows="6"></textarea><br><br>
-
-<select id="voice">
-  <option value="alloy">Male Voice</option>
-  <option value="verse">Female Voice</option>
-</select><br><br>
-
-<button onclick="generate()">Generate Voice</button>
-
-<br><br>
-<audio controls id="audio"></audio>
-<br>
-<a id="download" download="voice.mp3">Download MP3</a>
-
-<script>
-async function generate() {
-  const text = document.getElementById("text").value;
-  const voice = document.getElementById("voice").value;
-
-  const res = await fetch("/tts", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ text, voice })
-  });
-
-  const data = await res.json();
-  document.getElementById("audio").src = data.file;
-  document.getElementById("download").href = data.file;
-}
-</script>
-
+  <script>
+    async function speak() {
+      const text = document.getElementById("text").value;
+      const res = await fetch("/tts", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ text })
+      });
+      const blob = await res.blob();
+      document.getElementById("audio").src = URL.createObjectURL(blob);
+    }
+  </script>
 </body>
 </html>
